# voxel

./: .clang-format  CMakeLists.txt  readme.md
assets/: vertex.glsl
assets/shaders/: fragment.glsl  vertex.glsl
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: camera.h  chunk.cpp  chunk.h  engine.cpp  engine.h  framebuffer.cpp  framebuffer.h  main.c  main.cc  main.cpp  math.cpp  math.h  noise.cpp  noise.md  player.cpp  player.h  shader.cpp  shader.h  spritesheet.cpp  spritesheet.h  terrain.h  utils.h  vertex.h  voxel.h
